[project]
name = "linkedinbot"
version = "0.1.0"
description = "AI-powered LinkedIn post generator using DeepSeek"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "linkedin-api-client>=0.3.0",
    "requests>=2.31.0",
]
